[UPDATE] 전적검색 db 정보 불러오기 수정